--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
+    "@vercel/analytics": "^1.3.1",
+    "dotenv": "^16.4.5",
     "firebase": "^10.13.0",
     "next": "14.2.6",
     "openai": "^4.57.0",
